--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300&display=swap');
 body{
     font-family: "Inter" !important;
 }
@@ -12,14 +13,24 @@ body{
 }
 .logo img{
     /* width: 100%; */
-    height: 79px;
-    padding-top: 10px;
+    /* height: 79px; */
+    padding-top: 12px;
 }
 .top_menu{
     display: flex;
     justify-content: space-between;
     background: rgba(252, 244, 210, 0.5); 
     padding: 10px 50px;   
+    height: 48px;
+}
+.top_menu::before{
+    content: "";
+    height: max-content;
+    border-top: 48px solid #fff;
+    border-right: 50px solid #fdf9e8;
+    position: absolute;
+    top: 0;
+    left: 337px;
 }
 ul.contact-icons{
     display: flex;
@@ -45,10 +56,20 @@ ul.social-icons{
     color: #555A61;
 }
 .menu{
+    height: 60px;
     display: flex;
     padding: 10px 50px;
     justify-content: space-between;
     background: #FFE52C;
+}
+.menu::before {
+    content: "";
+    border-top: 60px solid #fff;
+    border-right: 64px solid #ffe52c;
+    position: absolute;
+    top: 48px;
+    left: 273px;
+
 }
 .dropdown a{
     font-style: normal;
@@ -58,18 +79,23 @@ ul.social-icons{
     color: #89877B;
     text-decoration: none;
 }
+.main_banner{
+    padding: 0px !important;
+}
 .main_wrap{
     width: 100%;
-    
+    padding: 0px !important;
+}
+.banner_image{
+    padding: 0px;
 }
 .slide_img{
-    width: 100%;
-    /* height: 100vh; */
-    /* background: linear-gradient(90deg, #2B2E32 3.95%, rgba(196, 196, 196, 0) 103.95%); */
+    background: linear-gradient(90deg, #2B2E32 3.95%, rgba(196, 196, 196, 0) 103.95%);
 }
 .slide_img img{
+    width: 100%;
     position: relative;
-    opacity: linear-gradient(90deg, #2B2E32 3.95%, rgba(196, 196, 196, 0) 103.95%);
+    background: linear-gradient(89.9deg, rgba(0, 0, 0, 0.85) 10.89%, rgba(249, 246, 244, 0) 100.44%);
 }
 .slide_contents{
     position: absolute;
@@ -113,6 +139,7 @@ color: #FFFFFF;
 .title{
 padding: 70px 0px;
 text-align: center;
+position: relative;
 }
 .title h4{
     font-style: normal;
@@ -133,12 +160,19 @@ text-align: center;
     text-align: center;
     letter-spacing: 0.9px;
     color: #D96704;
-    border-bottom: 2px solid #DFD8C5;
     /* border-block-start-width: 20px; */
 }
+.title p::after{
+    content: "";
+    width: 143px;
+    border-bottom: 2px solid #DFD8C5;
+    position: absolute;
+    top: 173px;
+    left: 45%;
+}
 .former{
-    padding: 60px;
-    
+    padding: 52px;
+    position: relative;
 }
 .former_img img{
     width: 100%;
@@ -147,11 +181,11 @@ text-align: center;
 .person_name{
     position: relative;
     z-index: 2;
-    bottom: 50px;
+    bottom: 44px;
     text-align: center;
     width: 100%;
     background-color: #F9F6F4;
-    padding: 14px;
+    padding: 10px;
 }
 .former h4{
     font-family: Inter;
@@ -172,24 +206,38 @@ text-align: center;
     text-align: center;
     color: #373434;
 }
-.former_center{
-    padding: 60px;
-    margin-top: 60px;
-}
 .former_background{
     background-color: #FFE52C;
-    margin-top: 20px;
-    /* height: 100px; */
+    height: 282px;
+    top: 38px;
+    position: relative;
+    width: 100%;
+    /* left: 48px; */
+    z-index: -1;
+    padding: 15px;
+    margin-bottom: 30px;
 }
 .former_background .former_img{
-    padding: 0px 20px 0px 20px;
+    position: relative;
+    top: -42px;
 }
 .bottom_former_first .former{
     padding: 0 20% 20% 25%;
-
 }
 .bottom_former_second .former{
     padding: 0 25% 20% 20%;
+}
+
+.founder{
+    font-family: Inter;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 18px;
+    text-transform: uppercase;
+    color: #D96704 !important;
+    border-left: 5px solid #D96704;
+    padding: 10px 0px 10px 2px;
 }
 .program{
     background-color: #FCF4D2;
@@ -198,6 +246,7 @@ text-align: center;
     padding-right: 80px;
     padding-left: 80px;
 }
+
 .program h3{
     font-family: Inter;
     font-style: normal;
@@ -213,9 +262,7 @@ text-align: center;
 .latest_slider img{
     width: 100%;
     padding: 20px;
-}
-.latest_slider .slick-list{
-    /* padding: 0px 80px 0px 80px; */
+    position: relative;
 }
 .prev_latest{
     position: absolute;
@@ -248,20 +295,12 @@ text-align: center;
     letter-spacing: 0.44px;
     color: #242424;
 }
-.arrows{
-    display: flex;
-    justify-content: flex-end;
-}
-.arr{
-    padding: 2px;
-    background: #FBFBFB;
-}
 .event_section{
     display: flex;
     justify-content: space-between;
     background: #F0F6F2;
     padding: 10px 60px 10px 10px;
-    margin-bottom: 20px;
+    margin: 15px 0px;
 }
 .date{
     padding: 10px;
@@ -270,7 +309,7 @@ text-align: center;
     font-size: 15px;
     line-height: 24px;
     font-weight: bold;
-    text-align: center;
+    text-align: left;
     color: #000000;
 }
 .event_content p{
@@ -306,6 +345,17 @@ text-align: center;
     padding: 66px;
     text-align: center;
     background: #F9F6F4;
+    position: relative;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.hurpes_yellow{
+    height: 280px;
+    width: 316px;
+    background-color: #FFB800;
+    position: absolute;
+    right: -16px;
+    bottom: -16px;
+    z-index: -1;
 }
 .glances p{
     /* width: 378px; */
@@ -336,7 +386,7 @@ text-align: center;
 }
 .footer{
     background: #414040;
-    padding: 60px 0px;
+    padding: 60px 10px 0px 0px;
 }
 .footer h3{
     font-family: Inter;
@@ -364,4 +414,143 @@ text-align: center;
     display: flex;
     align-items: center;
     color: #FFFFFF;
+}
+p.copyright{
+    padding-top: 40px;
+    padding-bottom: 20px;
+    margin: 0px !important;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 18px;
+    color: #FFFFFF;
+}
+.dropdown-menu{
+    padding: 0px !important;
+    top: 25px !important;
+    width: 270px;
+}
+a.dropdown-item{
+    background: linear-gradient(180deg, #4F5254 0%, #393B3A 97.3%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    color: #fff;
+    padding: 13px 20px;
+    display: flex;
+    border-bottom: 2px solid #000;
+}
+.dropdown-item i{
+    color: #A1A1A1;
+    font-size: 18px;
+    margin-right: 25px;
+}
+.slide_box{
+    position: relative;
+}
+.overlay_content{
+    padding: 20px;
+    position: absolute;
+    top: 0px;
+    opacity: 0;
+} 
+.hovercontents {
+    background: #383838;
+    padding: 22px 33px 37px;
+    /* position: absolute; */
+    /* top: 0; */
+    height: 241px;
+    width: 100%;
+    /* display: none; */
+    transition: all ease 5s;
+    padding: 20px;
+}
+.slide_box:hover .overlay_content {
+    opacity: 1;
+    transition: all ease 0.5s;
+    z-index: 3;
+}
+.hovercontents h5 {
+    font-family: "Utsaah";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 20px;
+    text-transform: uppercase;
+    color: #E9E2E2;
+}
+p.hoverDate {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 16px;
+    letter-spacing: 0.9px;
+    color: #F29F05;
+    margin-bottom: 20px;
+}
+p.hoverDetails {
+    font-family: "Utsaah";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: #FFFFFF;
+    margin-bottom: 30px;
+}
+.hovercontents span {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 16px;
+    letter-spacing: 0.9px;
+    color: #FFFFFF;
+}
+
+/* css for notch in menu */
+
+.square_box{
+    height: 30px;
+    width: 30px;
+    background: linear-gradient(180deg, #4F5254 0%, #393B3A 97.3%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
+    position: absolute;
+    top: -11px;
+    right: 16px;
+    transform: rotate(45deg);
+    border-radius: 3px;
+    z-index: -1;
+}
+.hurpes_pos{
+    left: -133px !important;
+}
+.publications{
+    left: 140px !important;
+}
+.about_us{
+    left: -167px !important;
+}
+.org_structure{
+    left: -62px !important;
+}
+.n_arrow{
+    position: absolute;
+    top: -20px;
+    right: 0px;
+    background-color: #F0F6F2;
+    padding: 5px;
+    z-index: 1;
+}
+.p_arrow{
+    background-color: #F0F6F2;
+    position: absolute;
+    right: 12px;
+    top: -20px;
+    padding: 5px;
+    z-index: 1;
 }
