--- a/css/tranaparency.css
+++ b/css/tranaparency.css
@@ -8,7 +8,7 @@
     color: #000000;
 }
 .transparency p{
-    padding: 0px !important;
+    padding: 0px;
     font-family: Inter;
     font-style: normal;
     font-weight: 500;
